#85 Re-enable tests, fix reliability issues concerning ResolveMatches messages.
#91 Add more logging as well